# agentic-contextualizer

./: .env.example  .gitignore  API_VERIFICATION_FINDINGS.md  CLAUDE.md  README.md  pyproject.toml  test_agent_config.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  LANGSMITH_VALIDATION.md  SCOPED_AGENT_FLOW.md  USER_GUIDE.md
docs/diagrams/: architecture.mmd  pipeline-sequence.mmd
docs/examples/: agent-example.py  research-example.md
docs/findings/: 14-02-2026-codex.md  refactoring-prompt.md
docs/plans/: 2025-01-12-scoped-context-design.md  2025-01-12-scoped-context-implementation.md  2025-12-12-scoped-context-security-fixes.md  2026-02-06-git-pull-tool-design.md  2026-02-10-litellm-implementation-plan.md  2026-02-10-litellm-integration-design.md  2026-02-13-code-review-refactoring-design.md  2026-02-13-code-review-refactoring-implementation.md  2026-02-13-pr9-review-fixes.md  2026-02-13-token-rate-limiting-design.md  2026-02-13-token-rate-limiting-implementation.md  2026-02-14-agent-mode-usage-caps-design.md  2026-02-14-agent-mode-usage-caps-implementation.md  2026-02-14-agent-token-consumption-design.md  2026-02-14-agent-token-consumption-implementation.md  2026-02-14-scoped-agent-token-fixes-design.md  expanding-plans.md  (+6 more)
scripts/: debug_agent_config.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_generator.py  test_integration.py  test_llm.py  test_models.py  test_observability.py  test_repo_resolver.py  test_scanner.py  test_scope_context_file.py  test_scope_integration.py  test_search_tools.py
(+88 files in other folders)
